simplify form code

--- a/index.html
+++ b/index.html
@@ -9,39 +9,39 @@
 			<label class="form-label"> Name: <span class="form-req">*</span></label>
 		</div>
 		<div class="form-field-above">
-			<input type="text" data-groupid="5-desktop" name="elm-bb5cf480-2f2a-4ded-be29-5883dcc7fb22" data-label="Name:" data-formtype="input" class="form-value form-value-invalid" data-content="" placeholder="This is a required field." required="true" data-namefield="true" tabindex="500" data-placeholder="This is a required field." data-value="" value="">
+			<input type="text" name="name" class="form-value form-value-invalid" data-content="" placeholder="This is a required field." required="true" data-namefield="true" tabindex="500" data-placeholder="This is a required field." data-value="" value="Zack Dinerstein">
 		</div>
 		<div data-label-container-groupid="5-desktop" class="form-label-above">
-			<label class="form-label" for="elm-2c9dc204-8813-4fde-a33e-5f1bb3845d66"> 
+			<label class="form-label" for="emailfrom"> 
 				Email: <span class="form-req">*</span>
 			</label>
 		</div>
 		<div data-field-container-groupid="5-desktop" class="form-field-above">
-			<input type="email" id="elm-2c9dc204-8813-4fde-a33e-5f1bb3845d66" data-groupid="5-desktop" name="elm-2c9dc204-8813-4fde-a33e-5f1bb3845d66" data-label="Email:" data-formtype="email" data-gemsubmit="true" class="form-value" data-content="" placeholder="Enter email address" required="true" tabindex="501">
+			<input type="email" data-groupid="5-desktop" name="emailfrom" data-label="Email:" data-formtype="email" data-gemsubmit="true" class="form-value" data-content="" placeholder="Enter email address" required="true" tabindex="501" value="zackdhome@gmail.com">
 			<label class="form-label opt-in-label">
 				<input type="checkbox" class="opt-in-checkbox">Check here to receive email updates
 			</label>
 		</div>
 		<div data-label-container-groupid="5-desktop" class="form-label-above">
-			<label class="form-label" for="elm-990b3725-68af-4237-ba9f-7bfa7a10b47d"> 
+			<label class="form-label" for="subject"> 
 				Subject: <span class="form-req">*</span>
 			</label>
 		</div>
 		<div data-field-container-groupid="5-desktop" class="form-field-above">
-			<input type="text" data-groupid="5-desktop" name="elm-990b3725-68af-4237-ba9f-7bfa7a10b47d" data-label="Subject:" data-formtype="input" class="form-value" data-content="" placeholder="Enter text here" required="true" tabindex="502">
+			<input type="text" data-groupid="5-desktop" name="subject" data-label="Subject:" data-formtype="input" class="form-value" data-content="" placeholder="Enter text here" required="true" tabindex="502" value="This is my Subject">
 		</div>
 		<div class="form customform form-row allow-select" data-aid="elm-container-0ae77251-cbcb-48b4-ae44-66fc25b05434">
 			<div data-label-container-groupid="5-desktop" class="form-label-above">
-				<label class="form-label" for="elm-0ae77251-cbcb-48b4-ae44-66fc25b05434"> 
+				<label class="form-label" for="message"> 
 					Message: <span class="form-req">*</span>
 				</label>
 			</div>
 			<div data-field-container-groupid="5-desktop" class="form-field-above">
-				<textarea data-groupid="5-desktop" id="elm-0ae77251-cbcb-48b4-ae44-66fc25b05434" class="form-value" data-label="Message:" data-formtype="paragraph" placeholder="Enter your comment here" data-content="" required="true" tabindex="503"></textarea>
+				<textarea data-groupid="5-desktop" name="message" class="form-value" data-label="Message:" data-formtype="paragraph" placeholder="Enter your message here" data-content="" required="true" tabindex="503">This is my message</textarea>
 			</div>
 		</div>
 		<input type="hidden" name="emailto" value="zackdhome@gmail.com"/>
-		<input type="hidden" name="referrer" value="http://redmondgardencenter.aiprx.com/?thanks"/>
+		<input type="hidden" name="referrer" value="http://xkcd.com"/>
 		<input type="submit" value="Submit" class='form-submit form-button-disabled'>
 	</form>
 </body>
